--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,17 +10,24 @@ html
 		link(rel='stylesheet', href='../css/custom.css')
 
 	body
-
+		
+		//- pantalla listado
+		.container.listado
+			.row
+				.col-md-offset-1.col-md-10.text-center
+					h1 Listado de Promociones
+					
 		.container
 			.row
 				//- pantalla agregar nuevo
 				h1 listo
 
 
-				//- pantalla listado
 
 
-		p Hello world! This is HTML5 Boilerplate.
+
+
+		
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
 	script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
 	script(src='../js/app.js')
