--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,22 +10,31 @@ html
 		link(rel='stylesheet', href='../css/custom.css')
 
 	body
-		
-		//- pantalla listado
-		.container.listado
-			.row
-				.col-md-offset-1.col-md-10.text-center
-					h1 Listado de Promociones
-					
+		br
 		.container
 			.row
-				//- pantalla agregar nuevo
-				h1 listo
-
-
-
-
-
+				div
+					// Nav tabs
+					ul.nav.nav-tabs(role='tablist')
+						li.active(role='presentation')
+							a(href='#home', aria-controls='home', role='tab', data-toggle='tab') Home
+						li(role='presentation')
+							a(href='#profile', aria-controls='profile', role='tab', data-toggle='tab') Profile
+						li(role='presentation')
+							a(href='#messages', aria-controls='messages', role='tab', data-toggle='tab') Messages
+						li(role='presentation')
+							a(href='#settings', aria-controls='settings', role='tab', data-toggle='tab') Settings
+					// Tab panes
+					.tab-content
+						#home.tab-pane.active(role='tabpanel') 
+							.col-md-offset-1.col-md-10.text-center
+								h1 Listado de Promociones
+						#profile.tab-pane(role='tabpanel') ...
+							//- pantalla agregar nuevo
+							.col-md-offset-1.col-md-10.text-center
+								h1 listo
+						#messages.tab-pane(role='tabpanel') ...
+						#settings.tab-pane(role='tabpanel') ...
 
 		
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
