--- a/jade/index.jade
+++ b/jade/index.jade
@@ -28,7 +28,7 @@ html
 							.col-md-offset-1.col-md-10.text-center
 								h1 Listado de Promociones
 								br
-							.col-md-offset-1.col-md-10
+							.col-md-offset-1.col-md-10.campania
 								.panel.panel-default
 									.panel-heading
 										.row
@@ -51,39 +51,136 @@ html
 											| Descuento: 
 											strong  30%
 
+							.col-md-offset-1.col-md-10.campania
+								.panel.panel-default
+									.panel-heading
+										.row
+											.col-md-6.col-xs-12.text-center
+												h3.panel-title Titulo Campaña
+											.col-md-4.col-xs-12.text-center
+												h3.panel-title Estatus:  
+													strong  Activo
+											.col-md-1.col-xs-6.text-center
+												i.fa.fa-pencil-square-o.ev.editar
+											.col-md-1.col-xs-6.text-center
+												i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+									.panel-body
+										.col-md-6.col-xs-12.text-center
+											| Descripción
+										.col-md-4.col-xs-12.text-center
+											| Fecha termino: 
+											strong  12/12/2017
+										.col-md-2.col-xs-12.text-center
+											| Descuento: 
+											strong  30%
+
+							.col-md-offset-1.col-md-10.campania
+								.panel.panel-default
+									.panel-heading
+										.row
+											.col-md-6.col-xs-12.text-center
+												h3.panel-title Titulo Campaña
+											.col-md-4.col-xs-12.text-center
+												h3.panel-title Estatus:  
+													strong  Activo
+											.col-md-1.col-xs-6.text-center
+												i.fa.fa-pencil-square-o.ev.editar
+											.col-md-1.col-xs-6.text-center
+												i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+									.panel-body
+										.col-md-6.col-xs-12.text-center
+											| Descripción
+										.col-md-4.col-xs-12.text-center
+											| Fecha termino: 
+											strong  12/12/2017
+										.col-md-2.col-xs-12.text-center
+											| Descuento: 
+											strong  30%
+							.col-md-offset-1.col-md-10.campania
+								.panel.panel-default
+									.panel-heading
+										.row
+											.col-md-6.col-xs-12.text-center
+												h3.panel-title Titulo Campaña
+											.col-md-4.col-xs-12.text-center
+												h3.panel-title Estatus:  
+													strong  Activo
+											.col-md-1.col-xs-6.text-center
+												i.fa.fa-pencil-square-o.ev.editar
+											.col-md-1.col-xs-6.text-center
+												i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+									.panel-body
+										.col-md-6.col-xs-12.text-center
+											| Descripción
+										.col-md-4.col-xs-12.text-center
+											| Fecha termino: 
+											strong  12/12/2017
+										.col-md-2.col-xs-12.text-center
+											| Descuento: 
+											strong  30%
+
+							.col-md-offset-1.col-md-10.campania
+								.panel.panel-default
+									.panel-heading
+										.row
+											.col-md-6.col-xs-12.text-center
+												h3.panel-title Titulo Campaña
+											.col-md-4.col-xs-12.text-center
+												h3.panel-title Estatus:  
+													strong  Activo
+											.col-md-1.col-xs-6.text-center
+												i.fa.fa-pencil-square-o.ev.editar
+											.col-md-1.col-xs-6.text-center
+												i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+									.panel-body
+										.col-md-6.col-xs-12.text-center
+											| Descripción
+										.col-md-4.col-xs-12.text-center
+											| Fecha termino: 
+											strong  12/12/2017
+										.col-md-2.col-xs-12.text-center
+											| Descuento: 
+											strong  30%
+							.col-md-offset-1.col-md-10
+								nav(aria-label='...')
+									ul.pager
+										li
+											a(href='#') Previous
+										li
+											a(href='#') Next
+
 						#profile.tab-pane(role='tabpanel')
-						
-								.col-xs-offset-1.col-xs-10
-									h1 Agregar una Campaña
-									form#nuevacampana
-										.col-xs-12
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese un codigo") 
-												span.text-left Codigo
-											input.form-control.codigo(placeholder="Introduce el codigo de la campaña")
-										.col-xs-12
-											label(data-toggle="tooltip" data-placement="top" title="Descripción breve de campaña") Descripción
-											input.form-control.descripcion(placeholder="Introduce una descripcion de la campaña")
-										.col-xs-6
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de inicio
-											input.form-control.fechainicio(type="date", placeholder="Introduce la fecha de inicio")
-										.col-xs-6
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de termino
-											input.form-control.fechafin(type="date", placeholder="Introduce la fecha de termino")
-										.col-xs-12.form-group
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese una cantidad") Descuento
-											.input-group
-												input.form-control.descuento(type='text', placeholder='Introduce el descuento de la campaña')
-												.input-group-addon %
-										.col-xs-12
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese estatus") Estatus
-											select.form-control
-												option Selecciona una
-												option Activa
-												option Desactivada
-												option En pausa
-											.space
-											button.btn.btn-primary Guardar
-											.space
+							.col-xs-offset-1.col-xs-10
+								h1 Agregar una Campaña
+								form#nuevacampana
+									.col-xs-12
+										label(data-toggle="tooltip" data-placement="top" title="Ingrese un codigo") 
+											span.text-left Codigo
+										input.form-control.codigo(placeholder="Introduce el codigo de la campaña")
+									.col-xs-12
+										label(data-toggle="tooltip" data-placement="top" title="Descripción breve de campaña") Descripción
+										input.form-control.descripcion(placeholder="Introduce una descripcion de la campaña")
+									.col-xs-6
+										label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de inicio
+										input.form-control.fechainicio(type="date", placeholder="Introduce la fecha de inicio")
+									.col-xs-6
+										label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de termino
+										input.form-control.fechafin(type="date", placeholder="Introduce la fecha de termino")
+									.col-xs-12.form-group
+										label(data-toggle="tooltip" data-placement="top" title="Ingrese una cantidad") Descuento
+										.input-group
+											input.form-control.descuento(type='text', placeholder='Introduce el descuento de la campaña')
+											.input-group-addon %
+									.col-xs-12
+										label(data-toggle="tooltip" data-placement="top" title="Ingrese estatus") Estatus
+										select.form-control
+											option Selecciona una
+											option Activa
+											option Desactivada
+											option En pausa
+										.space
+										button.btn.btn-primary Guardar
+										.space
 
 
 
@@ -97,12 +194,10 @@ html
 							span(aria-hidden='true') ×
 						h4.modal-title Eliminar
 					.modal-body
-						.col-md-offset-1.col-md-10
-							h4 ¿Estas seguro de eliminar la campaña?
-							br
-						.text-center
-							button.btn-solid.text-center(type='button', data-dismiss='modal') Cancelar
-							button.btn-solid.text-center(type='button', data-dismiss='modal') Aceptar
+						h4 ¿Estas seguro de eliminar la campaña?
+					.modal-footer
+						button.btn.btn-default(type='button', data-dismiss='modal') Close
+						button.btn.btn-primary(type='button', data-dismiss='modal') Save changes
 
 		
 	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
