--- a/jade/index.jade
+++ b/jade/index.jade
@@ -179,7 +179,9 @@ html
 											option Desactivada
 											option En pausa
 										.space
-										button.btn.btn-primary Guardar
+										button.btn.btn-primary 
+											i.fa.fa-trash-o.ev.fa-floppy-o  
+											|  Guardar
 										.space
 
 
