--- a/jade/index.jade
+++ b/jade/index.jade
@@ -39,10 +39,10 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-pencil-square-o.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-center
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
-														span(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
+														
 										.panel-body
 											.col-md-6.col-xs-12.text-center
 												| Descripción
@@ -63,9 +63,9 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-pencil-square-o.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-center
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
 												| Descripción
@@ -86,9 +86,9 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-pencil-square-o.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-center
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
 												| Descripción
@@ -108,9 +108,9 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-pencil-square-o.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-center
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
 												| Descripción
@@ -131,9 +131,9 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-pencil-square-o.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-center
-													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.ev.delete
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
 												| Descripción
