--- a/jade/index.jade
+++ b/jade/index.jade
@@ -39,7 +39,7 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
 												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 														
@@ -63,8 +63,8 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
@@ -86,8 +86,8 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
@@ -108,8 +108,8 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
@@ -131,8 +131,8 @@ html
 													h3.panel-title Estatus:  
 														strong  Activo
 												.col-md-1.col-xs-6.text-center
-													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Editar")
-												.col-md-1.col-xs-6.text-centerspan(data-toggle="tooltip" data-placement="top" title="Eliminar")
+													i.fa.fa-cog.fa-fw.fa-2x.ev.editar(data-toggle="tooltip" data-placement="top" title="Configurar")
+												.col-md-1.col-xs-6.text-center(data-toggle="tooltip" data-placement="top" title="Eliminar")
 													i(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalEliminar', data-trigger='hover').fa.fa-trash-o.fa-2x.ev.delete
 										.panel-body
 											.col-md-6.col-xs-12.text-center
