--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -23,6 +23,11 @@ body{
 		color: #094FA4;
     }
 }
+.tab-content{
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+}
 .tab-pane{
 	padding-bottom: 30px;
 }
