--- a/jade/index.jade
+++ b/jade/index.jade
@@ -13,6 +13,23 @@ html
 	body
 		br
 		.container
+			.space
+			.row
+				.nuevo.listado
+					.col-xs-offset-1.col-xs-10
+						h1 Inicia sesión en abc
+						form#Usuario
+							.col-xs-12
+								label(data-toggle="tooltip" data-placement="top" title="Ingresa tu usuario") 
+									span.text-left Usuario
+								input.form-control.codigo(placeholder="Introduce tu Usuario")
+							.col-xs-12
+								label(data-toggle="tooltip" data-placement="top" title="Contraseña") Contraseña
+								input.form-control.descripcion(placeholder="Introduce tu contraseña")
+
+
+		br
+		.container
 			.row
 				div
 					// Nav tabs
@@ -157,9 +174,9 @@ html
 									h1 Agregar una Campaña
 									form#nuevacampana
 										.col-xs-12
-											label(data-toggle="tooltip" data-placement="top" title="Ingrese un codigo") 
-												span.text-left Codigo
-											input.form-control.codigo(placeholder="Introduce el codigo de la campaña")
+											label(data-toggle="tooltip" data-placement="top" title="Ingrese un código") 
+												span.text-left Código
+											input.form-control.codigo(placeholder="Introduce el código de la campaña")
 										.col-xs-12
 											label(data-toggle="tooltip" data-placement="top" title="Descripción breve de campaña") Descripción
 											input.form-control.descripcion(placeholder="Introduce una descripcion de la campaña")
