--- a/jade/index.jade
+++ b/jade/index.jade
@@ -205,13 +205,13 @@ html
 												.input-group-addon
 													i.fa.fa-commenting-o(aria-hidden="true")
 												input.form-control.descripcion(placeholder="Introduce una descripcion de la campaña")
-										.col-xs-6
+										.col-xs-12.col-md-6
 											label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de inicio
 											.input-group
 												.input-group-addon
 													i.fa.fa-calendar(aria-hidden="true")
 												input.form-control.fechainicio(type="date", placeholder="Introduce la fecha de inicio")
-										.col-xs-6
+										.col-xs-12.col-md-6
 											label(data-toggle="tooltip" data-placement="top" title="Ingrese una fecha") Fecha de termino
 											.input-group
 												.input-group-addon
