--- a/jade/index.jade
+++ b/jade/index.jade
@@ -48,7 +48,7 @@ html
 					// Nav tabs
 					ul.nav.nav-tabs(role='tablist')
 						li.active(role='presentation')
-							a(href='#lista', aria-controls='lista', role='tab', data-toggle='tab') Campañas existentes
+							a(href='#lista', aria-controls='lista', role='tab', data-toggle='tab') Cupones existentes
 						li(role='presentation')
 							a(href='#nuevacampana', aria-controls='nuevacampana', role='tab', data-toggle='tab') Nuevo
 					// Tab panes
@@ -64,7 +64,7 @@ html
 										.panel-heading
 											.row
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Campaña
+													h3.panel-title Titulo Cupón
 												.col-md-4.col-xs-12.text-center
 													h3.panel-title Estatus:  
 														strong  Activo
@@ -88,7 +88,7 @@ html
 										.panel-heading
 											.row
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Campaña
+													h3.panel-title Titulo Cupón
 												.col-md-4.col-xs-12.text-center
 													h3.panel-title Estatus:  
 														strong  Activo
@@ -111,7 +111,7 @@ html
 										.panel-heading
 											.row
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Campaña
+													h3.panel-title Titulo Cupón
 												.col-md-4.col-xs-12.text-center
 													h3.panel-title Estatus:  
 														strong  Activo
@@ -133,7 +133,7 @@ html
 										.panel-heading
 											.row
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Campaña
+													h3.panel-title Titulo Cupón
 												.col-md-4.col-xs-12.text-center
 													h3.panel-title Estatus:  
 														strong  Activo
@@ -156,7 +156,7 @@ html
 										.panel-heading
 											.row
 												.col-md-6.col-xs-12.text-center
-													h3.panel-title Titulo Campaña
+													h3.panel-title Titulo Cupón
 												.col-md-4.col-xs-12.text-center
 													h3.panel-title Estatus:  
 														strong  Activo
@@ -184,7 +184,7 @@ html
 						#nuevacampana.tab-pane.listado(role='tabpanel')
 							.row
 								.col-xs-offset-1.col-xs-10
-									h1 Agregar una Campaña
+									h1 Agregar Cupón
 									form#nuevacampana
 										.col-xs-12
 											label(data-toggle="tooltip" data-placement="top" title="Ingrese un codigo")
@@ -198,7 +198,7 @@ html
 											.input-group
 												.input-group-addon
 													i.fa.fa-building(aria-hidden="true")
-												input.form-control.codigo(placeholder="Introdusca susucursal")
+												input.form-control.codigo(placeholder="Introdusca sucursal")
 										.col-xs-12
 											label(data-toggle="tooltip" data-placement="top" title="Descripción breve de campaña") Descripción
 											.input-group
